Opened 14 months ago
Closed 14 months ago
#18686 closed bug (fixed)
Deskbar: keyboard navigation broken with CursorUp
Reported by: | humdinger | Owned by: | jscipione |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta5 |
Component: | Applications/Deskbar | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev57389, 64bit.
If you use the CursorUp key to navigate the deskbar menus, you cannot launch an app with ENTER. Using CursorDown works. For example:
- Invoke the Deskbar menu (click on blue leaf or MENU key).
- Use CursorDown to move the selection to "Preferences".
- Hit ENTER.
-> Works, the Preferences Tracker window opens.
Whereas:
- Invoke the Deskbar menu (click on blue leaf or MENU key).
- Use CursorUp to move the selection to "Preferences".
- Hit ENTER.
-> Doesn't work. Nothing happens.
Weird...
Change History (2)
comment:1 by , 14 months ago
comment:2 by , 14 months ago
Milestone: | Unscheduled → R1/beta5 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Merged in hrev57413.
Note:
See TracTickets
for help on using tickets.
https://review.haiku-os.org/c/haiku/+/7140